Backport to JDK 8 API